test/trivial/roxana/test_param_decl3.good
Error: Top-level params must be initialized. (test_param_decl3.chpl:1)
